--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         <div class="photo-frame">
                             <div class="photo photo-6"></div>
                         </div>
-                        <div class="photo-caption">With all our joyous rides 😉</div>
+                        <div class="photo-caption">Till our recent trip 😉</div>
                     </div>
                     
                     <div class="polaroid polaroid-7">
